--- a/src/css/tea.css
+++ b/src/css/tea.css
@@ -21,7 +21,7 @@
 }
 
 /*业务相关*/
-.tea-icon-vip:before { content: "\e631"; color: #ffc50f }
+.tea-icon-vip:before { content: "\e687"; color: #ffc50f }
 .tea-icon-join:before { content: "\e62b"; color: #00be9b }
 .tea-icon-check:before { content: "\e629"; color: #41a4ec }
 .tea-icon-insure:before { content: "\e62d"; color: #ff855e }
@@ -102,14 +102,17 @@
 /* 我的新版相关*/
 .tea-icon-new-setting:before{ content: "\e680"; }
 .tea-icon-message-box:before{ content: "\e681"; }
-.tea-icon-new-vip:before{ content: "\e615"; color: #f2d394}
+.tea-icon-new-vip:before{ content: "\e615"; color: #ffe77b}
 .tea-icon-new-invite:before{ content: "\e682"; }
 
-/* 优惠券相关 */
+/* 现金券相关 */
 .tea-icon-del:before { content: "\e626" }
 
 /* 地址相关 */
 .tea-icon-editor:before {content: "\e609";}
+
+/* ETC相关*/
+.tea-icon-packet:before {content: "\e600" }
 /*END *LVPlum*/
 
 /* 业务员相关 */
@@ -326,9 +329,11 @@
     border-radius: 2.5rem;
     background-color: #fff; 
 }
-.tea-btn-submit:active {
+/* 容易让用户分心看不到提示信息，所以去除 */
+/* .tea-btn-submit:active {
     background-color: #3399ff;
-}
+    color: #fff;
+} */
 
 /*********************************** boreder *************************************/
 /*diy 圆角*/
@@ -520,27 +525,27 @@ input:valid + .tea-clear-btn { display: -webkit-box; }
  *暂无数据样式
  *要求父元素高度等于屏幕高度才能居中
  */
-.tea-nothing {
-	width: 100%;
-	height: 100%;
-	text-align: center;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-justify-content:center;
-    		justify-content:center;
-    -webkit-align-items: center;
-    		align-items: center;
-    -webkit-flex-direction: column;
-    		flex-direction: column;
+ .tea-nothing {
+    width: 100%; 
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+     -webkit-transform: translate(-50%,-50%);  
+        -ms-transform: translate(-50%,-50%);  
+            transform: translate(-50%,-50%); 
+    margin: auto;
+    text-align: center;
 }
 .tea-nothing img {
 	width: 30%;
     height: auto;
+    margin: auto;
     margin-top: -10%;
 	opacity: .7;
 }
 .tea-nothing p {
+    margin: auto;
 	margin-top: 0.8rem;
 	font-size: 0.8rem;
 	color: #999;
@@ -571,8 +576,8 @@ input:valid + .tea-clear-btn { display: -webkit-box; }
     bottom: 0;
 }
 
-.aui-list .aui-list-item.tea-noactive:active {
-    background-color: #fff;
+.tea-noactive:active {
+    background-color: #fff !important;
 }
 
 .tea-ellipsis-6 {
